# hugging-face-voice-assistant

./: pyproject.toml  readme.md
script/: bootstrap  run
src/hf_voice_assistant/: language_model_query.py  log.py  main.py  reproduce_audio.py  speech_transcription.py  synthesize_speech.py  wake_word_detection.py
